--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
     }
 
     function connect() {
-      const socket = io('http://localhost:3000', {
+      const socket = io('ws://localhost:3000/chat', {
         extraHeaders: {
           Authorization: `Bearer ${app.access_token}`,
         }
