--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,12 @@
 <head>
   <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
   <script type="module">
+
     const app = {
       'access_token': '',
       'refresh_token': ''
     }
-
+    let socket;
     const btnLogin = document.querySelector('#btnLogin');
     btnLogin.addEventListener('click', async () => {
       console.log('btnLogin clicked');
@@ -20,8 +21,19 @@
       connect();
     })
 
+    const btnDisconnect = document.querySelector('#btnDisconnect');
+    btnDisconnect.addEventListener('click', () => {
+      disconnect();
+    })
+
+    const txtLogs = document.querySelector('#txtLogs');
+
+    function disconnect() {
+      socket.disconnect();
+    }
     async function login() {
       console.log('login');
+      txtLogs.value += 'login\n';
       const api = 'http://localhost:3000/auth/login';
       const response = await fetch(api, {
         method: 'POST',
@@ -35,6 +47,7 @@
       })
 
       const data = await response.json();
+      txtLogs.value += `login response: ${JSON.stringify(data)}\n`;
 
       const accessToken = data.data.access_token;
       const refreshToken = data.data.refresh_token;
@@ -45,28 +58,34 @@
     }
 
     function connect() {
-      const socket = io('ws://localhost:3000/chat', {
+      socket= io(document.querySelector('#txtNamespace').value || 'ws://localhost:3000/chat', {
         extraHeaders: {
           Authorization: `Bearer ${app.access_token}`,
         }
       });
+
+      socket.on('events', function(data) {
+        txtLogs.value += `events: ${JSON.stringify(data)}\n`;
+        console.log('event', data);
+      });
+      socket.on('message', function(data) {
+        txtLogs.value += `message: ${JSON.stringify(data)}\n`;
+        console.log('message', data);
+      });
+      socket.on('exception', function(data) {
+        txtLogs.value += `exception: ${JSON.stringify(data)}\n`;
+        console.log('exception', data);
+      });
+      socket.on('disconnect', function() {
+        txtLogs.value += 'Disconnected\n';
+        console.log('Disconnected');
+      });
       socket.on('connect', function() {
-        console.log('Connected');
+        txtLogs.value += 'Connected\n';
 
         socket.emit('events', { test: 'test' });
         socket.emit('message', { test: 'test' });
-        socket.emit('identity', 0, response =>
-          console.log('Identity:', response),
-        );
-      });
-      socket.on('events', function(data) {
-        console.log('event', data);
-      });
-      socket.on('exception', function(data) {
-        console.log('event', data);
-      });
-      socket.on('disconnect', function() {
-        console.log('Disconnected');
+        socket.emit('identity', { identity: 'identity' });
       });
     }
   </script>
@@ -75,17 +94,25 @@
 <body>
   <div>
     <div>
+      <label for="txtNamespace">Namespace</label>
+      <input type="text" id="txtNamespace" name="namespace" value="ws://localhost:3000/chat"/>
+    </div>
+    <div>
       <label for="txtEmail">Email</label>
-      <input type="text" id="txtEmail" name="email"/>
+      <input type="text" id="txtEmail" name="email" value="kknd5050@bbz.link"/>
     </div>
     <div>
       <label for="txtPassword">password</label>
-      <input type="password" id="txtPassword" name="password"/>
+      <input type="password" id="txtPassword" name="password" value="1q2w3e"/>
     </div>
     <div>
       <button id="btnLogin">Login</button>
       <button id="btnConnect">Connect</button>
+      <button id="btnDisconnect">Disconnect</button>
     </div>
+  </div>
+  <div style="width: 100%; height: 500px; border: 1px solid #ccc; overflow: auto;">
+    <textarea id="txtLogs" style="width: 100%; height: 100%; resize: none;"></textarea>
   </div>
 </body>
 </html>
